# color-harmonization

./: .gitignore  CMakeLists.txt
CR/: lien_video.txt
images/: lilypad.ppm
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt  glad.c
lib/glad/include/glad/: glad.h
lib/imgui/: CMakeLists.txt  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
lib/imgui/include/: imgui_impl_opengl3_loader.h
lib/imguifiledialog/: CMakeLists.txt
src/: CMakeLists.txt  ColorSpaces.cpp  ColorSpaces.h  HSV.cpp  HSV.h  KMean.cpp  KMean.h  harmonization.cpp  harmonization.h  histogram_h.cpp  image_ppm.h  main.cpp  seg_reg.cpp  segmentation.cpp  segmentation.h  test_createRegions.cpp  test_genSeeds.cpp  test_harmonization.cpp  test_hsv.cpp  test_imgui.cpp  test_kmean.cpp  test_merge.cpp  test_mergeRegions.cpp  test_regionsHarmonization.cpp  test_sector_borders.cpp  test_select_color.cpp  test_shift.cpp  test_ycbcr.cpp  util.h
